chore(menu-button): align size mapping, add xs variant, fix focus-ring flash

--- a/css/_menu-button.scss
+++ b/css/_menu-button.scss
@@ -14,6 +14,15 @@
   .#{$prefix}--menu-button__trigger--open .#{$prefix}--btn__icon {
     transform: rotate(180deg);
   }
+
+  // Extra-small (Carbon React size="xs", 24px). Neither Button's "small"
+  // class (32px) nor any other Button size lands on 24px, so shrink further
+  // on top of the "small" size already passed to the trigger.
+  .#{$prefix}--menu-button__trigger--xs {
+    min-height: to-rem(24px);
+    padding-top: 0;
+    padding-bottom: 0;
+  }
 }
 
 @include exports("menu-button") {
